--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "uniswap-watcher",
+  "name": "node-typescript-graphql-starter",
   "version": "1.0.0",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bstenm/uniswap-watcher.git"
+    "url": "git+https://github.com/bstenm/node-typescript-graphql-starter.git"
   },
   "bugs": {
-    "url": "https://github.com/bstenm/uniswap-watcher/issues"
+    "url": "https://github.com/bstenm/node-typescript-graphql-starter/issues"
   },
   "scripts": {
     "dev": "nodemon",
     "build": "rimraf dist && tsc",
-    "test": "jest",
+    "test": "jest --watchAll",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "apollo-server-express": "^2",
     "express": "^4.17.1",
+    "graphql": "^15.5.1",
     "helmet": "^4.6.0",
     "typescript": "^4.3.5"
   },
