--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/bstenm/node-typescript-graphql-starter/issues"
   },
   "scripts": {
-    "dev": "nodemon",
+    "dev": "NODE_ENV=development nodemon",
     "build": "rimraf dist && tsc",
     "test": "jest --watchAll",
     "lint": "eslint . --ext .ts",
@@ -19,16 +19,26 @@
   },
   "dependencies": {
     "apollo-server-express": "^2",
+    "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "helmet": "^4.6.0",
-    "typescript": "^4.3.5"
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.37",
+    "typescript": "^4.3.5",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.0",
     "@types/node": "^16.4.13",
     "@types/supertest": "^2.0.11",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -39,6 +49,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^27.0.6",
+    "jest-mock-extended": "^2.0.2-beta2",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
