--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon",
     "build": "rimraf dist && tsc",
-    "test": "jest --watchAll",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
   },
