--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,6 +70,6 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "resolveJsonModule": true /* Enabling the option allows importing JSON, and validating the types in that JSON file. */
   },
-  "include": ["src"],
+  "include": ["src", "integration_tests/graphqlServer.test.ts"],
   "exclude": ["dist"]
 }
