--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "apollo-server-express": "^2",
+    "@graphql-tools/schema": "^8.1.1",
+    "apollo-server-express": "^3.1.2",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -30,6 +31,7 @@
     "helmet": "^4.6.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "subscriptions-transport-ws": "^0.9.19",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.37",
     "typescript": "^4.3.5",
