--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^27.0.0",
     "@types/node": "^16.4.13",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "eslint": "^5.16.0",
