--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "rimraf": "^3.0.2",
     "supertest": "^6.1.5",
     "ts-jest": "^27.0.4",
-    "ts-node": "^10.2.0"
+    "ts-node": "^10.2.0",
+    "typedoc": "^0.21.5"
   }
 }
