--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.8",
     "@graphql-tools/schema": "^8.1.1",
     "apollo-server-express": "^3.1.2",
     "class-validator": "^0.13.1",
