--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
   "dependencies": {
     "@apollo/client": "^3.4.8",
     "@graphql-tools/schema": "^8.1.1",
+    "apollo-link-ws": "^1.0.20",
     "apollo-server-express": "^3.1.2",
     "class-validator": "^0.13.1",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
     "helmet": "^4.6.0",
     "pg": "^8.7.1",
+    "react": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "subscriptions-transport-ws": "^0.9.19",
     "type-graphql": "^1.1.1",
@@ -44,6 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.0",
     "@types/node": "^16.4.13",
+    "@types/node-fetch": "^2.5.12",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "@types/winston": "^2.4.4",
