--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "@types/winston": "^2.4.4",
+    "@types/ws": "^7.4.7",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
