--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-redis-subscriptions": "^2.4.0",
     "helmet": "^4.6.0",
+    "ioredis": "^4.27.8",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "subscriptions-transport-ws": "^0.9.19",
@@ -43,6 +45,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.26.7",
     "@types/jest": "^27.0.0",
     "@types/node": "^16.4.13",
     "@types/node-fetch": "^2.5.12",
